--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             color: #333;
         }
         .container {
-            display: flex;
-            justify-content: space-between;
             width: 90%;
             margin: auto;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
         }
         header {
             background: #FFC107;
@@ -34,7 +35,7 @@
             margin-top: 20px;
             border-radius: 5px;
             box-shadow: 0px 0px 10px 0px #000;
-            width: 45%;
+            flex: 1 1 45%;
         }
         .form-section form {
             display: flex;
@@ -62,17 +63,6 @@
             width: 100%;
             height: 400px;
         }
-        .menu {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 20px;
-        }
-        .menu select {
-            margin-right: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
         .language-toggle {
             display: flex;
             justify-content: center;
@@ -89,91 +79,77 @@
             border-radius: 5px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const data = {
-                labels: ['TRV (Visitor)', 'TRV (Super Visa)', 'Study Permit', 'Work Permit'],
-                datasets: [{
-                    label: 'Average Wait Time (days)',
-                    data: [30, 45, 60, 75],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            };
-
-            const config = {
-                type: 'bar',
-                data: data,
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            };
-
-            const myChart = new Chart(
-                document.getElementById('waitTimeChart'),
-                config
-            );
-        });
-
-        function setLanguage(lang) {
-            const elements = document.querySelectorAll('[data-en], [data-fr], [data-zh], [data-zh-tw]');
-            elements.forEach(element => {
-                element.textContent = element.getAttribute('data-' + lang);
-            });
-        }
-    </script>
 </head>
 <body>
     <header>
-        <h1 data-en="Share your experience. We are not your spies, because we are humans." 
-            data-fr="Partagez vos expériences. Nous ne sommes pas vos espions, car nous sommes humains." 
-            data-zh="分享您的经历。我们不是间谍，因为我们是人类。" 
-            data-zh-tw="分享您的經歷。我們不是間諜，因為我們是人類。">Share your experience. We are not your spies, because we are humans.</h1>
-        <p data-en="We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin."
-            data-fr="Nous croyons en un Canada juste et inclusif plus que vous, car nous croyons en un Canada qui ne discrimine pas ou ne profile pas les gens en fonction de leur pays d'origine."
-            data-zh="我们比你更相信一个公正和包容的加拿大，因为我们相信一个不基于原籍国歧视或定性人的加拿大。"
-            data-zh-tw="我們比你更相信一個公正和包容的加拿大，因為我們相信一個不基於原籍國歧視或定性人的加拿大。">We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin.</p>
-        <p data-en="We are more than numbers. We are real people with stories of our dreams and trust in Canada."
-            data-fr="Nous sommes plus que des numéros. Nous sommes de vraies personnes avec des histoires de nos rêves et de notre confiance au Canada."
-            data-zh="我们不仅仅是数字。我们是真实的人，有着我们的梦想和对加拿大的信任的故事。"
-            data-zh-tw="我們不僅僅是數字。我們是真實的人，有著我們的夢想和對加拿大的信任的故事。">We are more than numbers. We are real people with stories of our dreams and trust in Canada.</p>
+        <h1 data-en="End Systemic Profiling of Chinese-born Immigrants" data-fr="Mettre fin au profilage systémique des immigrants nés en Chine" data-zh="结束对中国出生移民的系统性定性">End Systemic Profiling of Chinese-born Immigrants</h1>
+        <p data-en="We're Not Your Spies" data-fr="Nous ne sommes pas vos espions" data-zh="我们不是你的间谍">We're Not Your Spies</p>
     </header>
 
     <div class="language-toggle">
         <button onclick="setLanguage('en')">English</button>
         <button onclick="setLanguage('fr')">Français</button>
-        <button onclick="setLanguage('zh')">中文(简体)</button>
-        <button onclick="setLanguage('zh-tw')">中文(繁體)</button>
+        <button onclick="setLanguage('zh')">中文</button>
     </div>
 
     <div class="container">
         <section class="chart-section" id="chart">
-            <h2 data-en="View Aggregate Data" data-fr="Voir les données agrégées" data-zh="查看汇总数据" data-zh-tw="查看匯總數據">View Aggregate Data</h2>
-            <div class="menu">
-                <select id="applicationTypeFilter" data-en="Application Type" data-fr="Type de demande" data-zh="申请类型" data-zh-tw="申請類型">
-                    <option value="all" data-en="All Application Types" data-fr="Tous les types de demandes" data-zh="所有申请类型" data-zh-tw="所有申請類型">All Application Types</option>
-                    <option value="TRV_Visitor" data-en="TRV (Visitor)" data-fr="VRT (Visiteur)" data-zh="旅游签证（访问）" data-zh-tw="旅遊簽證（訪問）">TRV (Visitor)</option>
-                    <option value="TRV_SuperVisa" data-en="TRV (Super Visa)" data-fr="VRT (Super Visa)" data-zh="旅游签证（超级签证）" data-zh-tw="旅遊簽證（超級簽證）">TRV (Super Visa)</option>
-                    <option value="StudyPermit" data-en="Study Permit" data-fr="Permis d'études" data-zh="学习许可" data-zh-tw="學習許可">Study Permit</option>
-                    <option value="WorkPermit" data-en="Work Permit" data-fr="Permis de travail" data-zh="工作许可" data-zh-tw="工作許可">Work Permit</option>
-                    <option value="ExpressEntry" data-en="Permanent residency (Express Entry)" data-fr="Résidence permanente (Entrée express)" data-zh="永久居留（快速通道）" data-zh-tw="永久居留（快速通道）">Permanent residency (Express Entry)</option>
-                    <option value="PNP" data-en="Permanent residency (PNP)" data-fr="Résidence permanente (PPNP)" data-zh="永久居留（省提名计划）" data-zh-tw="永久居Here's the corrected HTML structure with options to toggle between English, French, Chinese (Simplified), and Chinese (Traditional), ensuring no text is repeated unnecessarily:
+            <h2 data-en="View Aggregate Data" data-fr="Voir les données agrégées" data-zh="查看汇总数据">View Aggregate Data</h2>
+            <div class="chart-container">
+                <canvas id="waitTimeChart"></canvas>
+            </div>
+        </section>
+
+        <section class="form-section" id="form">
+            <h2 data-en="Submit Your Information" data-fr="Soumettez vos informations" data-zh="提交您的信息">Submit Your Information</h2>
+            <form>
+                <label for="email" data-en="Email Address:" data-fr="Adresse électronique:" data-zh="电子邮件地址：">Email Address:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="citizenship" data-en="Citizenship:" data-fr="Citoyenneté:" data-zh="国籍：">Citizenship:</label>
+                <input type="text" id="citizenship" name="citizenship" required>
+
+                <label for="applicationType" data-en="Application Type:" data-fr="Type de demande:" data-zh="申请类型：">Application Type:</label>
+                <select id="applicationType" name="applicationType" required>
+                    <option value="TRV_Visitor" data-en="TRV (Visitor)" data-fr="VRT (Visiteur)" data-zh="旅游签证（访问）">TRV (Visitor)</option>
+                    <option value="TRV_SuperVisa" data-en="TRV (Super Visa)" data-fr="VRT (Super Visa)" data-zh="旅游签证（超级签证）">TRV (Super Visa)</option>
+                    <option value="StudyPermit" data-en="Study Permit" data-fr="Permis d'études" data-zh="学习许可">Study Permit</option>
+                    <option value="WorkPermit" data-en="Work Permit" data-fr="Permis de travail" data-zh="工作许可">Work Permit</option>
+                    <option value="ExpressEntry" data-en="Permanent residency (Express Entry)" data-fr="Résidence permanente (Entrée express)" data-zh="永久居留（快速通道）">Permanent residency (Express Entry)</option>
+                    <option value="PNP" data-en="Permanent residency (PNP)" data-fr="Résidence permanente (PPNP)" data-zh="永久居留（省提名计划）">Permanent residency (PNP)</option>
+                    <option value="Spousal" data-en="Permanent residency (Spousal)" data-fr="Résidence permanente (Conjoint)" data-zh="永久居留（配偶）">Permanent residency (Spousal)</option>
+                    <option value="DependentChild" data-en="Permanent residency (Dependent child)" data-fr="Résidence permanente (Enfant à charge)" data-zh="永久居留（受抚养子女）">Permanent residency (Dependent child)</option>
+                    <option value="ParentsGrandparents" data-en="Permanent residency (Parents & Grandparents)" data-fr="Résidence permanente (Parents et grands-parents)" data-zh="永久居留（父母及祖父母）">Permanent residency (Parents & Grandparents)</option>
+                </select>
+
+                <label for="submissionLocation" data-en="Submission Location:" data-fr="Lieu de soumission:" data-zh="提交地点：">Submission Location:</label>
+                <select id="submissionLocation" name="submissionLocation" multiple required>
+                    <option value="inCanada" data-en="In-Canada" data-fr="Au Canada" data-zh="在加拿大">In-Canada</option>
+                    <option value="international" data-en="International" data-fr="International" data-zh="国际">International</option>
+                </select>
+
+                <label for="countryOfResidence" data-en="Country of Residence:" data-fr="Pays de résidence:" data-zh="居住国家：">Country of Residence:</label>
+                <select id="countryOfResidence" name="countryOfResidence" required>
+                    <option value="China" data-en="China" data-fr="Chine" data-zh="中国">China</option>
+                    <option value="Canada" data-en="Canada" data-fr="Canada" data-zh="加拿大">Canada</option>
+                    <!-- Add more countries as needed -->
+                </select>
+
+                <label for="countryOfCitizenship" data-en="Country of Citizenship:" data-fr="Pays de citoyenneté:" data-zh="公民身份国家：">Country of Citizenship:</label>
+                <input type="text" id="countryOfCitizenship" name="countryOfCitizenship" required>
+
+                <label for="gender" data-en="Gender:" data-fr="Genre:" data-zh="性别：">Gender:</label>
+                <select id="gender" name="gender" required>
+                    <option value="male" data-en="Male" data-fr="Masculin" data-zh="男">Male</option>
+                    <option value="female" data-en="Female" data-fr="Féminin" data-zh="女">Female</option>
+                    <option value="nonBinary" data-en="Non-binary" data-fr="Non binaire" data-zh="非二元性别">Non-binary</option>
+                    <option value="preferNotToSay" data-en="Prefer not to say" data-fr="Préfère ne pas dire" data-zh="不愿透露">Prefer not to say</option>
+                </select>
+
+                <label for="age" data-en="Age:" data-fr="Âge:" data-zh="年龄：">Age:</label>
+                <input type="number" id="age" name="age" required>
+
+                <label for="submissionDate" data-en="Submission Date:" data-fr="Date de soumission:" data-zhHere is a streamlined and localized version of your HTML structure that meets your requirements:
 
 ```html
 <!DOCTYPE html>
@@ -193,6 +169,7 @@
         .container {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             width: 90%;
             margin: auto;
         }
@@ -212,7 +189,7 @@
             margin-top: 20px;
             border-radius: 5px;
             box-shadow: 0px 0px 10px 0px #000;
-            width: 45%;
+            flex: 1 1 45%;
         }
         .form-section form {
             display: flex;
@@ -240,17 +217,6 @@
             width: 100%;
             height: 400px;
         }
-        .menu {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 20px;
-        }
-        .menu select {
-            margin-right: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
         .language-toggle {
             display: flex;
             justify-content: center;
@@ -267,50 +233,9 @@
             border-radius: 5px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const data = {
-                labels: ['TRV (Visitor)', 'TRV (Super Visa)', 'Study Permit', 'Work Permit'],
-                datasets: [{
-                    label: 'Average Wait Time (days)',
-                    data: [30, 45, 60, 75],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            };
-
-            const config = {
-                type: 'bar',
-                data: data,
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            };
-
-            const myChart = new Chart(
-                document.getElementById('waitTimeChart'),
-                config
-            );
-        });
-
         function setLanguage(lang) {
-            const elements = document.querySelectorAll('[data-en], [data-fr], [data-zh], [data-zh-tw]');
+            const elements = document.querySelectorAll('[data-en], [data-fr], [data-zh]');
             elements.forEach(element => {
                 element.textContent = element.getAttribute('data-' + lang);
             });
@@ -319,17 +244,31 @@
 </head>
 <body>
     <header>
-        <h1 data-en="Share your experience. We are not your spies, because we are humans." 
-            data-fr="Partagez vos expériences. Nous ne sommes pas vos espions, car nous sommes humains." 
-            data-zh="分享您的经历。我们不是间谍，因为我们是人类。" 
-            data-zh-tw="分享您的經歷。我們不是間諜，因為我們是人類。">Share your experience. We are not your spies, because we are humans.</h1>
-        <p data-en="We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin."
-            data-fr="Nous croyons en un Canada juste et inclusif plus que vous, car nous croyons en un Canada qui ne discrimine pas ou ne profile pas les gens en fonction de leur pays d'origine."
-            data-zh="我们比你更相信一个公正和包容的加拿大，因为我们相信一个不基于原籍国歧视或定性人的加拿大。"
-            data-zh-tw="我們比你更相信一個公正和包容的加拿大，因為我們相信一個不基於原籍國歧視或定性人的加拿大。">We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin.</p>
-        <p data-en="We are more than numbers. We are real people with stories of our dreams and trust in Canada."
-            data-fr="Nous sommes plus que des numéros. Nous sommes de vraies personnes avec des histoires de nos rêves et de notre confiance au Canada."
-            data-zh="我们不仅仅是数字。我们是真实的人，有着我们的梦想和对加拿大的信任的故事。"
-            data-zh-tw="我們不僅僅是數字。我們是真實的人，有著我們的夢想和對加拿大的信任的故事。">We are more than numbers. We are real people with stories of our dreams and trust in Canada.</p>
+        <h1 data-en="End Systemic Profiling of Chinese-born Immigrants" data-fr="Mettre fin au profilage systémique des immigrants nés en Chine" data-zh="结束对中国出生移民的系统性定性">End Systemic Profiling of Chinese-born Immigrants</h1>
+        <p data-en="We're Not Your Spies" data-fr="Nous ne sommes pas vos espions" data-zh="我们不是你的间谍">We're Not Your Spies</p>
     </header>
 
+    <div class="language-toggle">
+        <button onclick="setLanguage('en')">English</button>
+        <button onclick="setLanguage('fr')">Français</button>
+        <button onclick="setLanguage('zh')">中文</button>
+    </div>
+
+    <div class="container">
+        <section class="chart-section" id="chart">
+            <h2 data-en="View Aggregate Data" data-fr="Voir les données agrégées" data-zh="查看汇总数据">View Aggregate Data</h2>
+            <div class="chart-container">
+                <canvas id="waitTimeChart"></canvas>
+            </div>
+        </section>
+
+        <section class="form-section" id="form">
+            <h2 data-en="Submit Your Information" data-fr="Soumettez vos informations" data-zh="提交您的信息">Submit Your Information</h2>
+            <form>
+                <label for="email" data-en="Email Address:" data-fr="Adresse électronique:" data-zh="电子邮件地址：">Email Address:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="citizenship" data-en="Citizenship:" data-fr="Citoyenneté:" data-zh="国籍：">Citizenship:</label>
+                <input type="text" id="citizenship" name="citizenship" required>
+
+                <label for="applicationType" data-en="Application Type:" data-fr="Type de demande:"
