--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-To include a chart and a box displaying the wait time for each type of application in your HTML, you can use the following updated version of your code. This includes a placeholder for a chart (using Chart.js) and a styled box to show the wait time for each application type.
-
-Here's how you can integrate these features into your HTML:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -181,4 +176,37 @@ Here's how you can integrate these features into your HTML:
 
                 <label for="countryOfResidence" data-en="Country of Residence:" data-fr="Pays de résidence:" data-zh="居住国家：">Country of Residence:</label>
                 <select id="countryOfResidence" name="countryOfResidence" required>
-                    <option value="China" data
+                    <option value="China" data-en="China" data-fr="Chine" data-zh="中国">China</option>
+                    <option value="Canada" data-en="Canada" data-fr="Canada" data-zh="加拿大">Canada</option>
+                    <!-- Add more countries as needed -->
+                </select>
+
+                <label for="countryOfCitizenship" data-en="Country of Citizenship:" data-fr="Pays de citoyenneté:" data-zh="公民身份国家：">Country of Citizenship:</label>
+                <input type="text" id="countryOfCitizenship" name="countryOfCitizenship" required>
+
+                <label for="gender" data-en="Gender:" data-fr="Genre:" data-zh="性别：">Gender:</label>
+                <select id="gender" name="gender" required>
+                    <option value="male" data-en="Male" data-fr="Masculin" data-zh="男">Male</option>
+                    <option value="female" data-en="Female" data-fr="Féminin" data-zh="女">Female</option>
+                    <option value="nonBinary" data-en="Non-binary" data-fr="Non binaire" data-zh="非二元性别">Non-binary</option>
+                    <option value="preferNotToSay" data-en="Prefer not to say" data-fr="Préfère ne pas dire" data-zh="不愿透露">Prefer not to say</option>
+                </select>
+
+                <label for="age" data-en="Age:" data-fr="Âge:" data-zh="年龄：">Age:</label>
+                <input type="number" id="age" name="age" required>
+
+                <label for="submissionDate" data-en="Submission Date:" data-fr="Date de soumission:" data-zh="提交日期：">Submission Date:</label>
+                <input type="date" id="submissionDate" name="submissionDate" required>
+
+                <input type="submit" value="Submit" data-en="Submit" data-fr="Soumettre" data-zh="提交">
+            </form>
+        </section>
+
+        <div class="info-box">
+            <h2 data-en="Current Wait Time" data-fr="Délai d'attente actuel" data-zh="当前等待时间">Current Wait Time</h2>
+            <p data-en="Application Type: TRV (Visitor)" data-fr="Type de demande: VRT (Visiteur)" data-zh="申请类型：旅游签证（访问）">Application Type: TRV (Visitor)</p>
+            <p data-en="Processing Time: 6 months" data-fr="Temps de traitement: 6 mois" data-zh="处理时间：6个月">Processing Time: 6 months</p>
+        </div>
+    </div>
+</body>
+</html>
